<resources>
    <string name="app_name">WebSearch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="search_screen_desc">Welcome to WebSearch, In this app you will be able to search anything you would like, with 3 different types of searches, WEB, NEWS and IMAGE Search, and if you want your child to use this app, just toggle on the safe search option! This ensures the child\'s safety and filters out unwanted content!</string>
    <string name="search_result_desc">You will be able to share your searches with your friends and family! </string>
    <string name="search_label">Search: </string>
    <string name="search_type_label">Search Type: </string>
    <string name="safe_search_label">Safe Search: </string>
    <string name="time_stamp_label">Timestamp: </string>
    <string name="search_query">Search Query</string>
    <string name="search_type">Search Type</string>
    <string name="safe_search">Safe Search</string>
    <string name="timestamp">timestamp</string>
    <string name="clear">Clear</string>
    <string name="night_mode_toggle_content_description">Toggle night mode</string>
    <string name="night_mode_toggle">Toggle night mode</string>


</resources>
